--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Barnes-Hut Algorithm for CS205</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">BEHALF</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -42,14 +42,14 @@
 
 				<!-- Banner -->
 					<section id="banner">
+						
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions">
+							<!--<div class="12u"><span class="image fit"><img src="images/home.png" alt="" /></span></div>-->
+							<h2>BEHALF</h2>
+							<p>BarnEs-Hut ALgorithm For <a href="http://iacs-courses.seas.harvard.edu/courses/cs205/">CS205</a></p>
+							<!--<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+							</ul>-->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -74,7 +74,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/home.png" alt="" /></div><div class="content">
 								<h2>Magna primis lobortis<br />
 								sed ullamcorper</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
