--- a/website/index.html
+++ b/website/index.html
@@ -58,15 +58,15 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>The team</h2>
+								<p>We are three graduate students in the Astronomy Department at Harvard University.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li>
+									<span class="icon fa-diamond major style1"><span class="label">Ben Cook</span><h5>Ben Cook</h5></span></li>
+								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span><h5>Harshil Kamdar</h5></span></li>
+								<li><span class="icon fa-code major style3"><span class="label">Dolor</span><h5>Ana-Roxana Pop</h5></span></li>
+
 							</ul>
 						</div>
 					</section>
